--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -164,7 +164,7 @@
 
     <div class="setting">
       <mat-slide-toggle [(ngModel)]="showFeedbackForNeutralScores"
-        (change)="onSettingsChanged()">Show feedback for neutal scores.
+        (change)="onSettingsChanged()">Show feedback for neutral scores.
       </mat-slide-toggle>
     </div>
 
