--- a/src/app/modules/convai-checker/convai-checker.component.html
+++ b/src/app/modules/convai-checker/convai-checker.component.html
@@ -11,7 +11,8 @@
     [indicatorWidth]="13"
     [indicatorHeight]="13"
     [gradientColors]="demoSettings.gradientColors"
-    [scoreThresholds]="demoSettings.scoreThresholds"
+    [neutralScoreThreshold]="demoSettings.neutralScoreThreshold"
+    [toxicScoreThreshold]="demoSettings.toxicScoreThreshold"
     [feedbackText]="demoSettings.feedbackText"
     [showPercentage]="demoSettings.showPercentage"
     [showMoreInfoLink]="demoSettings.usePluginEndpoint ? false : demoSettings.showMoreInfoLink"
