--- a/src/app/modules/convai-checker/convai-checker.component.html
+++ b/src/app/modules/convai-checker/convai-checker.component.html
@@ -12,6 +12,7 @@
     [showFeedbackForNeutralScores]="demoSettings.showFeedbackForNeutralScores"
     [loadingIconStyle]="demoSettings.loadingIconStyle"
     [hasLocalAssets]="!demoSettings.usePluginEndpoint"
+    [fontFamily]="demoSettings.fontFamily"
 
     [hasScore]="analyzeCommentResponse !== null"
     [canAcceptFeedback]="canAcceptFeedback"
