--- a/src/app/modules/convai-checker/convai-checker.component.css
+++ b/src/app/modules/convai-checker/convai-checker.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Playfair+Display|Roboto&display=swap');
+
 #checkerContainer {
   font-family: Roboto, sans-serif;
   line-height: 1;
