--- a/src/app/modules/convai-checker/perspective-status.component.html
+++ b/src/app/modules/convai-checker/perspective-status.component.html
@@ -69,14 +69,7 @@
                tabindex=0
                role="status"
                [attr.aria-hidden]="!showScore || isPlayingLoadingAnimation || isPlayingFadeDetailsAnimation">
-            <span id="feedbackText">{{getFeedbackTextForScore(score)}}</span><span
-               *ngIf="showMoreInfoLink"
-               class="link"
-               role="link"
-               tabindex=0
-               (keyup.enter)="notifyModelInfoLinkClicked()"
-               (keyup.space)="notifyModelInfoLinkClicked()"
-               (click)="notifyModelInfoLinkClicked()">Learn more</span>
+            <span id="feedbackText">{{getFeedbackTextForScore(score)}}</span>
           </div>
 
           <div class="error" *ngIf="initializeErrorMessage">
