Updates to checker based on team feedback: changes the user feedback prompt text to reflect the different model names, and sends a new check request when the user changes the model.

--- a/src/app/modules/convai-checker/convai-checker.component.html
+++ b/src/app/modules/convai-checker/convai-checker.component.html
@@ -13,6 +13,7 @@
     [hasLocalAssets]="!demoSettings.usePluginEndpoint"
     [fontFamily]="demoSettings.fontFamily"
 
+    [modelDescription]="modelDescription"
     [hasScore]="analyzeCommentResponse !== null"
     [canAcceptFeedback]="canAcceptFeedback"
     [feedbackRequestInProgress]="feedbackRequestInProgress"
