--- a/src/app/modules/convai-checker/perspective-status.component.html
+++ b/src/app/modules/convai-checker/perspective-status.component.html
@@ -118,7 +118,7 @@
                     tabindex=0
                     (keyup.enter)="notifyModelInfoLinkClicked()"
                     (keyup.space)="notifyModelInfoLinkClicked()"
-                    (click)="notifyModelInfoLinkClicked()">toxic</span>?
+                    (click)="notifyModelInfoLinkClicked()">{{modelDescription}}</span>?
             </span>
           </div>
         </div> <!-- End configuration DEMO_SITE -->
